--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.9",
+    "react-scroll": "^1.9.0",
     "react-tinder-card": "^1.6.3",
     "remixicon": "^3.3.0",
     "styled-components": "^6.1.0",
@@ -37,6 +37,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-scroll": "^1.8.10",
     "typescript": "^4.7.4"
   }
 }
